<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/mi_cuenta" >
        <menu >
            <item android:title="@string/datos_personales" />
            <item android:title="@string/mis_documentos_de_viaje" />
            <item android:title="@string/mis_compa_eros_de_viaje" />
        </menu>
    </item>
    <item
        android:id="@+id/misViajes"
        android:title="@string/mis_viajes" />
    <item android:title="@string/tarjetas_de_embarque" />
    <item android:title="@string/informacion_sobre_el_vuelo" />
    <item android:title="@string/info_actualizada" />
    <item android:title="@string/vales_de_regalo" />
    <item android:title="@string/revista_de_vuelo" />
    <item android:title="@string/string_terminos_y_condiciones" />
    <item android:title="@string/centro_de_ayuda" />
    <item android:title="@string/contactar_con_la_aerolinea" />
    <item android:title="@string/politica_de_privacidad" />
    <item android:title="@string/string_configuraci_n_de_privacidad" />
</menu>