<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.Aerolinea">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/aerolinea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/spOrigen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/origen"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <Spinner
                    android:id="@+id/spDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/destino"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/spinner"

                    android:spinnerMode="dropdown"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:hint="@string/nombreHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,InefficientWeight" />

                <EditText
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:hint="@string/direccion"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:hint="@string/numero_de_telefono"
                    android:inputType="phone"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/fecha_de_salida"
                    android:inputType="date"
                    android:textColorHint="@color/rosa"
                    tools:ignore="TextContrastCheck" />

                <Switch
                    android:id="@+id/switchMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/movilidad_reducida"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck, UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:text="@string/extras"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/primera_clase" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/asiento_con_ventanilla" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mascota" />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desayuno_almuerzo_cena" />

                <CheckBox
                    android:id="@+id/cbTerminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/TerminosYCondiciones" />

                <CheckBox
                    android:id="@+id/cbSeguro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seguro_de_viaje" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btComprar"
                    style="@style/MyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:backgroundTint="@color/purple_200"
                    android:text="@string/comprar" />

                <ImageButton
                    android:id="@+id/btAccesoPreferente"
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:contentDescription="@string/boton_acceso_preferente"
                    app:srcCompat="@drawable/boton" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>